syntax = "proto3";

option java_multiple_files = true;
option java_package = "via.sdj3.sep_t3.protobuf";

service postService
{
  rpc getAllPosts(Empty) returns (AllPosts);
  rpc createPost(PostCreationGrpcDto) returns(PostReadGrpcDto);
  rpc getPostById(GenericMessage)returns(PostReadGrpcDto);
  rpc updatePost(PostUpdateGrpcDto)returns(PostReadGrpcDto);
}


message PostCreationGrpcDto
{
  int32 ownerId = 1;
  string title = 2;
  string body = 3;
}

message PostReadGrpcDto
{
  int32 id = 1;
  int32 ownerId = 2;
  string title = 3;
  string body = 4;
}

// same as PostReadGrpcDto, made separately for sake of clarity
message PostUpdateGrpcDto
{
  int32 id = 1;
  int32 ownerId = 2;
  string title = 3;
  string body = 4;
}

message AllPosts
{
  repeated PostReadGrpcDto post = 1;
}

message Empty{

}

message GenericMessage
{
  string message=1;
}